--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/movies?useSSL=false
     username: root
+    password: root
     tomcat:
       max-active: 4
       max-idle: 4
@@ -21,6 +22,6 @@ logging.level:
   org.superbiz.moviefun: DEBUG
 
 s3:
-  accessKey: <access key id>
-  secretKey: <secret access key>
-  bucketName: <name of the bucket>
+  accessKey: AKIAVT7FZ27LW4WE2EHQ
+  secretKey: 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
+  bucketName: ksridhar.techmahindra.com
