--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,8 @@
 rootProject.name = 'moviefun'
+
+include "applications:movie-fun-app"
+include "components:movies"
+include "components:albums"
+include "components:blobstore"
+
+
