--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,10 @@ buildscript {
         hibernateVersion = "5.2.17.Final"
         slf4jVersion = "1.7.25"
         junitVersion = "4.12"
-        mysqlVersion = "5.1.40"
+        mysqlVersion = "8.0.13"
+        springCloudVersion = "Finchley.SR2"
+        springCloudSsoVersion = "2.1.3.RELEASE"
+        springSecurityOAuthAutoconfigVersion = "2.1.0.RELEASE"
     }
 
     repositories {
@@ -17,7 +20,7 @@ buildscript {
     }
 }
 
-task dependenciesGraphDot {
+/*task dependenciesGraphDot {
 
     mustRunAfter "clean"
 
@@ -44,12 +47,12 @@ task dependenciesGraphDot {
         }
         dotFile << "}\n"
     }
-}
+}*/
 
-task dependenciesGraph(dependsOn: "dependenciesGraphDot", type: Exec) {
+/*task dependenciesGraph(dependsOn: "dependenciesGraphDot", type: Exec) {
     workingDir "$project.buildDir/dependenciesGraph"
     commandLine "dot", "-O", "-Tpng", "graph.dot"
-}
+}*/
 
 task clean(type: Delete) {
     delete "build"
