--- a/manifest.yml
+++ b/manifest.yml
@@ -3,22 +3,30 @@ applications:
 - name: album-service
   path: applications/album-service/build/libs/album-service-1.1.0-SNAPSHOT.jar
   routes:
-    - route: album-service-{UNIQUE_IDENTIFIER}.apps.chicken.pal.pivotal.io
+    - route: album-service-sridharsameer.apps.evans.pal.pivotal.io
+  env:
+    GRANT_TYPE: client_credentials
   services:
-  - album-database
+  - albums-mysql
   - photo-storage
+  - movie-fun-sso
 - name: movie-service
   path: applications/movie-service/build/libs/movie-service-1.1.0-SNAPSHOT.jar
   routes:
-    - route: movie-service-{UNIQUE_IDENTIFIER}.apps.chicken.pal.pivotal.io
+    - route: movie-service-sridharsameer.apps.evans.pal.pivotal.io
+  env:
+    GRANT_TYPE: client_credentials
   services:
-  - movie-database
+  - movies-mysql
+  - movie-fun-sso
 - name: movie-fun-app
   path: applications/movie-fun-app/build/libs/movie-fun-app-1.1.0-SNAPSHOT.war
   routes:
-    - route: movie-fun-app-{UNIQUE_IDENTIFIER}.apps.chicken.pal.pivotal.io
+    - route: movie-fun-app-sridharsameer.apps.evans.pal.pivotal.io
   services:
   - photo-storage
+  - movie-fun-sso
   env:
-    ALBUMS_URL: http://album-service-{UNIQUE_IDENTIFIER}.apps.chicken.pal.pivotal.io/albums
-    MOVIES_URL: http://movie-service-{UNIQUE_IDENTIFIER}.apps.chicken.pal.pivotal.io/movies
+    GRANT_TYPE: authorization_code
+    ALBUMS_URL: http://album-service-sridharsameer.apps.evans.pal.pivotal.io/albums
+    MOVIES_URL: http://movie-service-sridharsameer.apps.evans.pal.pivotal.io/movies
